overhaul admin metrics
